# hlavi-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-release.yml  ci.yml  pr-preview.yml  release.yml  tag.yml
.hlavi/: .gitignore  board.json
src/: app.rs  main.rs  ui.rs
